// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<span
  className="colorPicker"
  style={undefined}
>
  <button
    className="swatch"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
  <input
    className="control"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  />
  <div
    className="menu bottom"
  />
</span>
`;

exports[`Renders correctly with defined props 1`] = `
<span
  className="colorPicker outer"
  style={undefined}
>
  <button
    className="swatch"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
  <input
    className="control"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="#bebebe"
  />
  <div
    className="menu bottom"
  />
</span>
`;
